First update in a while, trying to get it up and running for the new season. A bunch of League and Teams work

--- a/BowlingCoreMVC/Views/Home/Index.cshtml
+++ b/BowlingCoreMVC/Views/Home/Index.cshtml
@@ -61,7 +61,10 @@
             {
                 foreach (var TWS_List in ((List<List<TeamLastWeekData>>)ViewData["AllTeamsWeekSummary"]))
                 {
-                    <partial name="_TeamWeekSummary" model='@TWS_List' />
+					foreach (var TWS in TWS_List)
+					{
+                    	<partial name="_TeamWeekSummary" model='@TWS' />
+					}
                 }
             }
             </div>
