--- a/BowlingCoreMVC/Views/Series/Edit.cshtml
+++ b/BowlingCoreMVC/Views/Series/Edit.cshtml
@@ -10,7 +10,7 @@
 
 <div class="row">
 <div class="col-lg-6">
-@if (Model.LeagueID == 0 || Model.LeagueID == null)
+@if (Model.LeagueID == 0 || Model.League == null)
 {
     <table class="table table-condensed table-bordered">
         <th>
