--- a/BowlingCoreMVC/Views/Shared/_TeamWeekSummary.cshtml
+++ b/BowlingCoreMVC/Views/Shared/_TeamWeekSummary.cshtml
@@ -1,7 +1,7 @@
 ﻿@model BowlingCoreMVC.Models.TeamLastWeekData
 
 
-<div class="card text-white bg-secondary card-inline">
+<div class="card text-white bg-secondary card-inline w-100">
     <div class="card-body">
         <h5 class="card-title">@Model.TeamName</h5>
         <h6 class="card-subtitle mb-2">@Model.SubTitle</h6>
@@ -57,6 +57,7 @@
     }
 </div>
 
+<br /><br />
 
 
 
