--- a/BowlingCoreMVC/Views/Home/Index.cshtml
+++ b/BowlingCoreMVC/Views/Home/Index.cshtml
@@ -4,7 +4,6 @@
 
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
-
 @*TODO: Revamped home page for logged in user*@
 
 <div class="body-content">
@@ -12,61 +11,77 @@
         @if (!SignInManager.IsSignedIn(User))
         {
 
-        <div class="row">
-            <div class="col-lg-2"></div>
-            @*<h3>Environment test:</h3>
-                <h3>@ViewData["EnvironmentTest"]</h3>*@
-            <div class="col-lg-8">
-                <h2 class="text-info">Welcome to BowlingHub!</h2>
-                <p>BowlingHub is the place to log all of your bowling scores and view your progress. You will be able to create leagues, log your series/games, see your statistics, and compete on the highscores! Click the Register button above to get started.</p>
+            <div class="row">
+                <div class="col-lg-2"></div>
+                @*<h3>Environment test:</h3>
+                    <h3>@ViewData["EnvironmentTest"]</h3>*@
+                <div class="col-lg-8">
+                    <h2 class="text-info">Welcome to BowlingHub!</h2>
+                    <p>BowlingHub is the place to log all of your bowling scores and view your progress. You will be able to create leagues, log your series/games, see your statistics, and compete on the highscores! Click the Register button above to get started.</p>
+                </div>
+                <div class="col-lg-2"></div>
             </div>
-            <div class="col-lg-2"></div>
-        </div>
         }
         @* User is signed in *@
-        else 
+        else
         {
             <div class="col-lg-12">
-                <h2>Welcome Back to BowlingHub!</h2>
-                 
-            @if (ViewData["TodaysLeague"] != null)
-            {
-                League l = (League)ViewData["TodaysLeague"];
-                <div class="card">
-                    <div class="card-header">Your league "@l.Name" is today!</div>
-                    <div class="card-body">
-                        <a asp-action="QuickCreateSeries" asp-controller="Home" asp-route-LeagueID="@l.ID" class="btn btn-primary btn-block">Start bowling a New Series for @l.Name</a>                        
-                    </div>
-                </div>
-                
-                
-            }
+                <h2 class="text-center">Welcome Back to BowlingHub!</h2>
+                <hr />
 
-            @if (ViewData["MyLast5Games"] != null && ((ListSingleValue)ViewData["MyLast5Games"]).Keys.Count != 0)
-            {
-                <partial name="_CardListSingleValue" model='@ViewData["MyLast5Games"]' />
-            }
-            else
-            {
-                <h3>Welcome!</h3>
-                <p>You don't have any games yet; Start recording your games under <a asp-controller="Game" asp-action="Index">'My Games'</a> to see some information here.</p>
-            }
-
-            @if (ViewData["TeamWeekSummary"] != null)
-            {
-                <partial name="_TeamWeekSummary" model='@ViewData["TeamWeekSummary"]' />
-            }
-
-            @if (ViewData["AllTeamsWeekSummary"] != null && ((List<List<TeamLastWeekData>>)ViewData["AllTeamsWeekSummary"]).Count > 0)
-            {
-                foreach (var TWS_List in ((List<List<TeamLastWeekData>>)ViewData["AllTeamsWeekSummary"]))
+                @if (ViewData["TodaysLeague"] != null)
                 {
-					foreach (var TWS in TWS_List)
-					{
-                    	<partial name="_TeamWeekSummary" model='@TWS' />
-					}
+                    League l = (League)ViewData["TodaysLeague"];
+                    <div class="card w-50 text-center">
+                        <div class="card-header">Your league "@l.Name" is today!</div>
+                        <div class="card-body">
+                            <a asp-action="QuickCreateSeries" asp-controller="Home" asp-route-LeagueID="@l.ID" class="btn btn-primary btn-block">Start bowling a New Series for @l.Name</a>
+                        </div>
+                    </div>
+                    <br />
+
                 }
-            }
+            <div class="card-deck">
+                @if (ViewData["MyGamesBowledToday"] != null && ((ListSingleValue)ViewData["MyGamesBowledToday"]).Keys.Count != 0)
+                {
+                    <partial name="_CardListSingleValue" model='@ViewData["MyGamesBowledToday"]' />
+                }
+
+                @if (ViewData["MyLast5Games"] != null && ((ListSingleValue)ViewData["MyLast5Games"]).Keys.Count != 0)
+                {
+                    <partial name="_CardListSingleValue" model='@ViewData["MyLast5Games"]' />
+                }
+                else
+                {
+                    <h3>Welcome!</h3>
+                    <p>You don't have any games yet; Start recording your games under <a asp-controller="Game" asp-action="Index">'My Games'</a> to see some information here.</p>
+                }
+
+                @if (ViewData["MyHighGames"] != null && ((ListSingleValue)ViewData["MyHighGames"]).Keys.Count != 0)
+                {
+                    <partial name="_CardListSingleValue" model='@ViewData["MyHighGames"]' />
+                }
+
+                @if (ViewData["MyHighSeries"] != null && ((ListSingleValue)ViewData["MyHighSeries"]).Keys.Count != 0)
+                {
+                    <partial name="_CardListSingleValue" model='@ViewData["MyHighSeries"]' />
+                }
+            </div>
+                <br /><br />
+                <h2 class="text-center">My Leagues and Teams Summary</h2>
+                <hr />
+
+                @if (ViewData["AllTeamsWeekSummary"] != null && ((List<List<TeamLastWeekData>>)ViewData["AllTeamsWeekSummary"]).Count > 0)
+                {
+                    @foreach (var TWS_List in ((List<List<TeamLastWeekData>>)ViewData["AllTeamsWeekSummary"]))
+                    {
+                        foreach (var TWS in TWS_List)
+                        {
+                            <partial name="_TeamWeekSummary" model='@TWS' />
+                        }
+                    }
+                }
+
             </div>
         }
 
