--- a/BowlingCoreMVC/Views/Stats/Index.cshtml
+++ b/BowlingCoreMVC/Views/Stats/Index.cshtml
@@ -3,8 +3,8 @@
     ViewData["Title"] = "Sitewide Scores";
 }
 
-<h2>@ViewData["Title"]</h2>
-
+<h2 class="text-center">@ViewData["Title"]</h2>
+<hr />
 
 
 <div class="body-content">
