--- a/BowlingCoreMVC/Views/Stats/UserSummary.cshtml
+++ b/BowlingCoreMVC/Views/Stats/UserSummary.cshtml
@@ -9,7 +9,7 @@
 }
 else
 {
-    <h2>@ViewData["Title"]</h2>
+    <h2 class="text-center">@ViewData["Title"]</h2>
     <hr />
     <div class="row">
         <div class="col-lg-12">
