--- a/BowlingCoreMVC/Views/Teams/Details.cshtml
+++ b/BowlingCoreMVC/Views/Teams/Details.cshtml
@@ -7,6 +7,29 @@
 
 <h1>Details</h1>
 
+@if (ViewData["TeamMembers"] != null)
+{
+    ListMultipleValue TeamMembers = (ListMultipleValue)ViewData["TeamMembers"];
+    <partial name="_CardListMultipleValue" model="TeamMembers" />
+    @* TODO(ERIC): Make Admin, Remove from Team buttons, Textbox with TeamName up top with a single button to update the name only *@
+}
+
+
+<form asp-action="Edit">
+    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+    <input type="hidden" asp-for="ID" />
+    <div class="form-group">
+        <label asp-for="TeamName" class="control-label"></label>
+        <input asp-for="TeamName" class="form-control" />
+        <span asp-validation-for="TeamName" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <input type="submit" value="Save" class="btn btn-primary" />
+    </div>
+</form>
+
+
+
 <div>
     <h4>Team</h4>
     <hr />
