--- a/BowlingCoreMVC/Views/Teams/Details.cshtml
+++ b/BowlingCoreMVC/Views/Teams/Details.cshtml
@@ -5,28 +5,52 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Details</h1>
+<h1>@(Model.TeamName + ViewData["Title"].ToString())</h1>
+
+<form asp-action="Edit">
+    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+    <input type="hidden" asp-for="ID" />
+    <div class="form-group d-inline-block">
+        <label asp-for="TeamName" class="control-label"></label>
+        <input asp-for="TeamName" class="form-control" />
+        <span asp-validation-for="TeamName" class="text-danger"></span>
+    </div>
+    <div class="form-group d-inline-block">
+        <input type="submit" value="Update Team Name" class="btn btn-primary" />
+    </div>
+</form>
 
 @if (ViewData["TeamMembers"] != null)
 {
     ListMultipleValue TeamMembers = (ListMultipleValue)ViewData["TeamMembers"];
     <partial name="_CardListMultipleValue" model="TeamMembers" />
-    @* TODO(ERIC): Make Admin, Remove from Team buttons, Textbox with TeamName up top with a single button to update the name only *@
+    @* TODO(ERIC): Make Admin, Remove from Team buttons *@
+
+    <table class="table">
+        <thead>
+            @foreach (var TeamMember in (List<TeamMember>)ViewData["TeamMembers"])
+            {
+
+                <tr>
+                    <td>
+                        @TeamMember.UserName
+                    </td>
+                    <td>
+                        @if (ViewData["IsCurrentUserAdmin"] != null && (bool)ViewData["IsCurrentUserAdmin"])
+                        {
+
+                        }
+                    </td>
+                </tr>
+            }
+        </thead>
+    </table>
+
+
 }
 
 
-<form asp-action="Edit">
-    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-    <input type="hidden" asp-for="ID" />
-    <div class="form-group">
-        <label asp-for="TeamName" class="control-label"></label>
-        <input asp-for="TeamName" class="form-control" />
-        <span asp-validation-for="TeamName" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <input type="submit" value="Save" class="btn btn-primary" />
-    </div>
-</form>
+
 
 
 
@@ -34,39 +58,33 @@
     <h4>Team</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.TeamName)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.TeamName)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.League)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.League.Name)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CreatedByID)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CreatedByID)
-        </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.CreatedDate)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.CreatedDate)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.ModifiedDate)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.ModifiedDate)
         </dd>
     </dl>
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.ID">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" asp-route-id="@Model.LeagueID">Back to List</a>
 </div>
