--- a/BowlingCoreMVC/Views/Stats/Index.cshtml
+++ b/BowlingCoreMVC/Views/Stats/Index.cshtml
@@ -86,7 +86,7 @@
                         </th>
                     </tr>
 
-                    @if (((List<Game>)ViewData["WeeklyGames"]).Count > 0)
+                    @if (((List<Series>)ViewData["AllTimeSeries"]).Count > 0)
                     {
                         @foreach (var s in (List<Series>)ViewData["AllTimeSeries"])
                         {
