--- a/BowlingCoreMVC/Views/Teams/Details.cshtml
+++ b/BowlingCoreMVC/Views/Teams/Details.cshtml
@@ -1,32 +1,32 @@
 ﻿@model BowlingCoreMVC.Models.Team
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Team Details";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>@(Model.TeamName + ViewData["Title"].ToString())</h1>
-
+<h1 class="text-center">@(Model.TeamName + " - " + ViewData["Title"].ToString())</h1>
+<hr />
 <form asp-action="Edit">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <input type="hidden" asp-for="ID" />
     <div class="form-group d-inline-block">
         <label asp-for="TeamName" class="control-label"></label>
-        <input asp-for="TeamName" class="form-control" />
+        <input asp-for="TeamName" class="form-control" readonly="@(!((bool)ViewData["IsCurrentUserAdmin"]))" />
         <span asp-validation-for="TeamName" class="text-danger"></span>
     </div>
     <div class="form-group d-inline-block">
-        <input type="submit" value="Update Team Name" class="btn btn-primary" />
+        <input type="submit" value="Update Team Name" class="btn btn-primary" disabled="@(!((bool)ViewData["IsCurrentUserAdmin"]))" />
     </div>
 </form>
-
+<br/>
 @if (ViewData["TeamMembers"] != null)
 {
-    ListMultipleValue TeamMembers = (ListMultipleValue)ViewData["TeamMembers"];
-    <partial name="_CardListMultipleValue" model="TeamMembers" />
+    @*ListMultipleValue TeamMembers = (ListMultipleValue)ViewData["TeamMembers"];
+    <partial name="_CardListMultipleValue" model="TeamMembers" />*@
     @* TODO(ERIC): Make Admin, Remove from Team buttons *@
-
-    <table class="table">
+    <h3>Team Members</h3>
+    <table class="table table-responsive-sm">
         <thead>
             @foreach (var TeamMember in (List<TeamMember>)ViewData["TeamMembers"])
             {
@@ -38,7 +38,16 @@
                     <td>
                         @if (ViewData["IsCurrentUserAdmin"] != null && (bool)ViewData["IsCurrentUserAdmin"])
                         {
+                            <a asp-action="RemoveFromTeam" asp-route-TeamID="@Model.ID" asp-route-UserID="@TeamMember.UserID" class="btn btn-outline-warning">Remove from Team</a>
 
+                            @if (TeamMember.IsAdmin)
+                            {
+                                <a asp-action="RemoveAdmin" asp-route-TeamID="@Model.ID" asp-route-UserID="@TeamMember.UserID" class="btn btn-outline-warning">Remove Admin</a>
+                            }
+                            else
+                            {
+                                <a asp-action="MakeAdmin" asp-route-TeamID="@Model.ID" asp-route-UserID="@TeamMember.UserID" class="btn btn-outline-warning">Make Admin</a>
+                            }
                         }
                     </td>
                 </tr>
@@ -53,9 +62,8 @@
 
 
 
-
+<br /><br />
 <div>
-    <h4>Team</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
@@ -84,7 +92,8 @@
         </dd>
     </dl>
 </div>
-<div>
+
+@*<div>
     <a asp-action="Edit" asp-route-id="@Model.ID">Edit</a> |
     <a asp-action="Index" asp-route-id="@Model.LeagueID">Back to List</a>
-</div>
+</div>*@
