--- a/BowlingCoreMVC/Views/Shared/_Layout.cshtml
+++ b/BowlingCoreMVC/Views/Shared/_Layout.cshtml
@@ -86,7 +86,7 @@
 
                     <li class="nav-item"><a asp-controller="Leagues" asp-action="Index" class="nav-link">Leagues</a></li>
                     <li class="nav-item"><a asp-controller="Stats" asp-action="Index" class="nav-link">Sitewide Scores</a></li>
-                    <li class="nav-item"><a asp-controller="Teams" asp-action="Index" class="nav-link">Teams Test</a></li>
+                    @*<li class="nav-item"><a asp-controller="Teams" asp-action="Index" class="nav-link">Teams Test</a></li>*@
                 }
             </ul>
             
@@ -123,7 +123,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2018 - @ViewData["AppName"] by Eric DeSmet</p>
+            <p>&copy; 2019 - @ViewData["AppName"] by Eric DeSmet</p>
         </footer>
     </div>
 
