--- a/BowlingCoreMVC/wwwroot/css/site.css
+++ b/BowlingCoreMVC/wwwroot/css/site.css
@@ -56,7 +56,7 @@
 }
 
 .scoreboard-framenum {
-//    background-color: rgba(20, 90, 50, .80);
+/*    background-color: rgba(20, 90, 50, .80);*/
     align-items: center;
     justify-content: center;
     color: white;
@@ -66,8 +66,8 @@
     border-bottom: 2px solid rgba(0, 50, 30, .75);
 	min-width: 20px;
 	min-height: 38%;
-//	padding-left: 5px;
-//	padding-right: 5px;
+/*	padding-left: 5px; */
+/*	padding-right: 5px; */
 }
 
 .scoreboard-box-10 {
@@ -271,7 +271,8 @@ input[type='checkbox']:disabled.pins-checkbox + label:before {
     content: "\2793";
 }
 
-
+/*
 .card-inline {
     display: inline-block;
 }
+    */
